# fastapi_practice

./: .gitignore  README.md  app.db  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.cursor/rules/: fastapi-tutor.mdc
app/: main.py
tests/: test_core.py
week00/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
week00/app/: main.py
week00/tests/: test_core.py
week01/: README.md
week02/: README.md
week03/: README.md
week04/: README.md
week05/: README.md
week06/: README.md
week07/: README.md
week08/: README.md
week09/: README.md
week10/: README.md
